# auth_things

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml  spec.yaml
.github/workflows/: main.yml
backend/: .gitignore  Cargo.toml  Dockerfile  README.md  run_aquiles.sh  run_imac.sh  spec.yaml
backend/.github/workflows/: rust.yml
backend/configuration/: imac.yaml  local.yaml
backend/migrations/: 20230227171207_users_table.sql
backend/scripts/: init_db_aquiles_docker.sh  init_db_docker.sh  setup_environment.sh
backend/src/: configuration.rs  lib.rs  session_state.rs
backend/src/auth/: mod.rs
backend/src/database/: mod.rs
backend/src/routes/: mod.rs  oauth.rs  poses.rs
common/: Cargo.toml
common/src/: configuration.rs
configuration/: aquiles.yaml  base.yaml  imac.yaml  production.yaml
cube/: .gitignore  Cargo.toml  README.md
cube/src/: camera.rs  main.rs  skeleton.rs
frontend/: Cargo.toml  Dockerfile  index.html  run_aquiles.sh  run_imac.sh  spec.yaml
frontend/src/: api_base_url  api_options  lib.rs  main.rs  router.rs  store.rs
frontend/src/api/: errors.rs  mod.rs  poses.rs
frontend/src/components/: mod.rs
frontend/src/components/atoms/: bb_button.rs  link.rs  mod.rs
frontend/src/components/organisms/: navbar.rs
frontend/src/components/pages/: home.rs  login.rs  mod.rs  portfolio.rs
frontend/src/contexts/: mod.rs  theme.rs
scripts/: init_db_docker.sh  init_redis.sh
