[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"

[dependencies]
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-web = { version = "4.3.0", features = ["openssl"] }
base64 = "0.21.0"
secrecy = "0.8.0"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.2"
tracing-subscriber = "0.3.16"
urlencoding = "2"
pretty_assertions = "1.3.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.93"
oauth2 = "4.3.0"
url = "2.3.1"
anyhow = "1.0.69"
config = "0.13.3"
jsonwebtoken = "8.2.0"
openssl = "0.10.45"
actix-web-lab = { version = "0.19.0", features = ["spa"] }
