[package]
name = "yoga_matt"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.9.1" } #, features = ["dynamic"] }
bevy_mod_picking = "0.11.0"
bevy-inspector-egui = "0.17.0"
rusqlite = "0.28.0"
bincode = "1.3.3"
serde = "1.0.152"
#bevy_transform_gizmo = { path = "../../../../extern/my_bevy_transform_gizmo", version = "0.5.0" }
