[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.2.3"
gloo-utils = "0.1.6"
oauth2 = "4.3.0"
once_cell = "1.17.1"
reqwasm = "0.5.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
stylist = { version = "0.12.0", features = ["yew", "parser"] }
thiserror = "1.0.38"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["HtmlDocument", "Document"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
